RESOLVED FIXED164966
Fix exception scope verification failures in ShadowChicken.cpp.
https://bugs.webkit.org/show_bug.cgi?id=164966
Summary Fix exception scope verification failures in ShadowChicken.cpp.
Mark Lam
Reported 2016-11-18 16:01:04 PST
Patch coming.
Attachments
proposed patch. (1.23 KB, patch)
2016-11-18 16:07 PST, Mark Lam
no flags
Mark Lam
Comment 1 2016-11-18 16:07:00 PST
Created attachment 295211 [details] proposed patch.
Mark Lam
Comment 2 2016-11-18 17:14:59 PST
Comment on attachment 295211 [details] proposed patch. Thanks for the review.
WebKit Commit Bot
Comment 3 2016-11-18 17:40:21 PST
Comment on attachment 295211 [details] proposed patch. Clearing flags on attachment: 295211 Committed r208912: <http://trac.webkit.org/changeset/208912>
WebKit Commit Bot
Comment 4 2016-11-18 17:40:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.