Fix exception scope verification failures in ShadowChicken.cpp. https://bugs.webkit.org/show_bug.cgi?id=164966

Reviewed by Saam Barati.

* interpreter/ShadowChicken.cpp:
(JSC::ShadowChicken::functionsOnStack):


Canonical link: https://commits.webkit.org/182621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208912 268f45cc-cd09-0410-ab3c-d52691b4dbfc